crates/hwledger-user-story-macros/tests/trybuild/bad_traces_to.stderr
error: [user_story_test] traces_to entry 'lowercase-not-fr' must match ^FR-[A-Z0-9][A-Z0-9_-]*$
  --> tests/trybuild/bad_traces_to.rs:3:1
   |
 3 | / #[user_story_test(yaml = r#"
 4 | | journey_id: ok-id
 5 | | title: "bad traces_to"
 6 | | persona: x
...  |
10 | | traces_to: [lowercase-not-fr]
11 | | "#)]
   | |____^
   |
   = note: this error originates in the attribute macro `user_story_test` (in Nightly builds, run with -Z macro-backtrace for more info)
